<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">ChatAI: AI Chatbot</string>
    <string name="email_feedback" translatable="false">customer@longkd.com</string>
    <string name="app_name_new">Chat GPT-4</string>
    <string name="text_chat_ai_mode1" translatable="false">Weird</string>
    <string name="text_chat_ai_mode2" translatable="false">Smart</string>
    <string name="text_chat_ai_mode3" translatable="false">Brainiac</string>
    <string name="app_ui_crash">App/UI crashed</string>
    <string name="sorry_string">Sorry, that should not have happened.</string>
    <string name="error_report_button_text">Report this error via e-mail</string>
    <string name="error_report_button_telegram">Report this error via telegram</string>
    <string name="copy_format">Copy formatted report</string>
    <string name="error_report_open_issue_button_text">Report</string>
    <string name="error_report_open_github_notice">Please check whether an issue discussing your crash already exists.</string>
    <string name="what_device_headline">Info:</string>
    <string name="what_happened_headline">What happened:</string>
    <string name="info_labels">What:\\nRequest:\\nGMT Time:\\nPackage:\\nVersion:\\nOS version:\\nDevice:\\nModel:\\nProduct:</string>
    <string name="your_comment">Your comment (in English):</string>
    <string name="error_details_headline">Details:</string>
    <string name="error_report_title">Error report</string>
    <string name="crash_report_copied">Crash report copied to clipboard</string>
    <string name="error_snackbar_message">Sorry, something went wrong.</string>
    <string name="error_snackbar_action">Report</string>
    <string name="text_setting">Settings</string>
    <string name="text_start_chat">Start Chat</string>
    <string name="text_your_chat_ai">Your Chatbot AI</string>
    <string name="text_ads_splash">This process may contain advertisements</string>
    <string name="text_chat_detail_title">GPT AI Chatbot</string>
    <string name="text_intro_first">How is your day going?\nLet\'s chat with me!</string>
    <string name="text_wonderful">Wonderful</string>
    <string name="text_great">Great</string>
    <string name="text_intro_second">Ask me anything you want to know, \nI will help you.</string>
    <string name="text_select_character">Select Character</string>
    <string name="hi_there">Hi there!</string>
    <string name="device_not_support">Unfortunately device not supported!</string>
    <string name="input_empty_error">Please input something!</string>
    <string name="something_error">Oh no, something went wrong, please try again!</string>
    <string name="type_here">Ask a question...</string>
    <string name="text_thanks">Thank you for using our application. You can rate the app on the CHPlay. This will help and encourage us a lot. Thank you and see you again!</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_update_to_premium">Upgrade to full version</string>
    <string name="text_update_to_premium_des">Enjoy unlimited access with all features. </string>
    <string name="text_support">Support</string>
    <string name="text_restore_purchase">Restore Purchase</string>
    <string name="text_about_us">About Us</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_term_of_use">Term of use</string>
    <string name="text_stay_in_touch">Stay in touch</string>
    <string name="text_rate_app">Rate App</string>
    <string name="text_send_feedback">Send Feedback</string>
    <string name="txt_comming_soon">Coming soon!</string>
    <string name="text_rate_des">We are working hard for a better user experience. We’d greatly appreciate if you can rate us.</string>
    <string name="text_rate">Rate</string>
    <string name="text_version">Version:</string>
    <string name="text_rate_suggest">The best we can get ♥</string>
    <string name="text_unlimited">Unlimited question &amp; Answers</string>
    <string name="text_unlock">Full character unlock</string>
    <string name="text_start_trial">Start Free Trial and Plan</string>
    <string name="text_trial_free_day">3-day free trial</string>
    <string name="text_trial_free_price">then %s/week, auto - renewable</string>
    <string name="text_best_offer">Best offer</string>
    <string name="text_lifetime_price">- Lifetime - Onetime payment</string>
    <string name="text_sub_temp">Subscription Terms</string>
    <string name="text_sub_temp_1">Terms &amp; Conditions</string>
    <string name="privacy_sub">Subscribed users have unlimited use and access to all of its Premium features, without any ads.\n- Non-subscribed users can continuously use the app with advertisements, and have a limited for use of Premium features. \n- Payment will be charged to your Google Account at confirmation of purchase.\n- Subscriptions automatically renew unless auto-renew is disabled at least 24 hours before the end of the current period.\n- Account will be charged for renewal within 24-hour prior to the end of the current period, and identify the cost of renewal.</string>
    <string name="privacy_sub2">\n- Any unused portion of a free trial period, if offered, will be forfeited when the user purchases a subscription to that publication, where applicable.- Subscriptions may be managed by the user and auto-renewal may be turned off by going to the user Account Settings after purchase. Note that uninstalling the app will not cancel your subscription.\n1. On your Android phone or tablet, let open the Google Play Store.\n2. Check if you are signed in to the correct Google Account.\n3. Tap Menu Subscriptions and Select the subscription you want to cancel.\n4. Tap Cancel subscription.</string>
    <string name="txt_billing_unavailable">In-app billing service is unavailable, please upgrade Android Market/Play to version 3.9.16 or higher!</string>
    <string name="txt_first_error_billing">An error occurred during purchase, please try again later!</string>
    <string name="txt_check_internet">Make sure Wi-Fi or Mobile Data is turn on. Then please try again</string>
    <string name="txt_check_wifi">Check your wifi connection and try again!</string>
    <string name="txt_no_internet">No internet connection!</string>
    <string name="txt_no_wifi">Please connect to wifi</string>
    <string name="txt_title_exit">Are you sure you want to exit?</string>
    <string name="txt_billing_premium_success">Thank you for purchasing!</string>
    <string name="txt_billing_premium_fail">Sorry you have not purchased or purchased package has expired!</string>
    <string name="txt_billing_restart_app">For the app to work at its best after you make a purchase, please restart the app to complete the conversion to a VIP user!</string>
    <string name="txt_get_premium">Get Premium</string>
    <string name="txt_mess_number_premium1">You have</string>
    <string name="txt_mess_number_premium2">free messages left</string>
    <string name="txt_gift_title">A special gift just for you. </string>
    <string name="txt_gift_title_des">Get it now.</string>
    <string name="txt_free_message">Free messages:</string>
    <string name="txt_start_trial">Start Free Trial</string>
    <string name="txt_month">Monthly</string>
    <string name="txt_lifetime">Lifetime</string>
    <string name="txt_start_month_auto">Auto - renewing subscription charged monthly</string>
    <string name="txt_start_one_time_auto">One time payment.\nAll new feature - Forever</string>
    <string name="txt_not_support_title">Oh no!</string>
    <string name="txt_not_support_title_des">We\'re sorry that this feature isn\'t available on your device. We will try to improve, see you in the next version.</string>
    <string name="txt_topic">Topics</string>
    <string name="txt_chat_ai">Chat AI</string>
    <string name="txt_topic_interview">I will act as the interviewer and ask you questions regarding the position you are applying for. You will respond to the questions as if you are the candidate. Let\'s begin!</string>
    <string name="txt_topic_develop">I am a developer with experience in developing secure web and app solutions. I am able to create an architecture and write code to meet your needs. Let\'s work together to bring your vision to life and create a robust and secure platform!</string>
    <string name="txt_topic_business">I will assist you with tips and templates to improve your skills in business and help you in your daily work related matters. Let\'s get started on enhancing your business acumen!</string>
    <string name="txt_topic_ad">I can help you with the creation of a marketing campaign to promote a product or service of your choice. Let\'s work together to make the campaign impactful and successful!</string>
    <string name="txt_topic_language">I am an expert in English language, with the skills to translate, correct spelling, and improve grammar. Let me assist you in ensuring your written language is accurate and polished.</string>
    <string name="txt_topic_chef"> I can provide suggestions for delicious and nutritious recipes that are easy to make and don\'t require a lot of time. I have a wide range of recipes and ideas that cater to different cooking skill levels. Let\'s work together to create healthy and tasty meals!</string>
    <string name="txt_topic_composer">I am here to help you with your song needs. Whether you\'re looking for the lyrics to a specific song or want lyrics written based on a concept you have in mind, I can assist you. I have the capability to find the lyrics to any song or write new lyrics based on your concept. Let\'s create some memorable and impactful lyrics!</string>
    <string name="txt_topic_mental">I am here to offer guidance and advice on managing emotions, stress, anxiety, and other mental health issues. My goal is to assist you in dealing with these challenges and finding healthy ways to cope. Let\'s work together to improve your overall well-being and emotional stability.</string>
    <string name="txt_topic_interview_title">Interviewer</string>
    <string name="txt_topic_develop_title">Developer</string>
    <string name="txt_topic_business_title">Business Assistant</string>
    <string name="txt_topic_ad_title">Advertiser</string>
    <string name="txt_topic_language_title">Language expert</string>
    <string name="txt_topic_chef_title">Chef</string>
    <string name="txt_topic_composer_title">Composer</string>
    <string name="txt_topic_mental_title">Mental Health Ad</string>
    <string name="txt_topic_interview_q1">What are the most common interview questions?</string>
    <string name="txt_topic_interview_q2">How do I prepare for an interview?</string>
    <string name="txt_topic_interview_q3">What are the best interview questions to ask candidates?</string>
    <string name="txt_topic_interview_q4">How do I conduct a successful job interview?</string>
    <string name="enter_your_prompt">Enter Your Prompt</string>
    <string name="get_inspired"><u>Get Inspired</u></string>
    <string name="choose_an_art_style">Choose an art style</string>
    <string name="generate">Generate</string>
    <string name="free_tries_left_s">Free Tries Left: %s</string>
    <string name="content_doesn_t_contain">Content doesn’t contain sensitive words.</string>
    <string name="more">More</string>
    <string name="image_type_object_any_details_ne_g_a_beautiful_magical_kingdom">Image type, object, any details \nE.g. A beautiful magical Kingdom</string>
    <string name="str_create_photo">Created Photo</string>
    <string name="str_popular">Popular</string>
    <string name="str_choose_action">Choose action:</string>
    <string name="str_open_camera">Open Camera</string>
    <string name="str_select_photo">Go to Photos</string>
</resources>