<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:background="@drawable/bg_background_detail_topic"
            android:gravity="center"
            android:padding="@dimen/_24sdp">

            <TextView
                android:id="@+id/dialogAction_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/str_choose_action"
                android:textColor="@color/color_white"
                android:fontFamily="@font/font_medium"/>

            <TextView
                android:id="@+id/dialogAction_btnOpenCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:background="@drawable/bg_border14_green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogAction_title"
                android:text="@string/str_open_camera"
                android:textSize="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/color_white"
                android:fontFamily="@font/font_medium"/>

            <TextView
                android:id="@+id/dialogAction_btnSelectPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/_12sdp"
                android:gravity="center"
                android:textSize="@dimen/_16sdp"
                android:background="@drawable/bg_border14_green"
                app:layout_constraintTop_toBottomOf="@id/dialogAction_btnOpenCamera"
                android:text="@string/str_select_photo"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@color/color_white"
                android:fontFamily="@font/font_medium"/>

            <TextView
                android:id="@+id/dialogAction_btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogAction_btnSelectPhoto"
                android:text="@string/text_cancel"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/color_white_50"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/font_medium"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>