<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llnViewArtContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_bg_gradient">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@id/fmHomeArtLlGenerate"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/font_bold"
                        android:text="@string/enter_your_prompt"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/_16sdp" />

                    <TextView
                        android:id="@+id/fmHomeArtTvInspired"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_medium"
                        android:text="@string/get_inspired"
                        android:textColor="@color/color_green_base"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp">

                    <EditText
                        android:id="@+id/fmHomeArtEdtPrompt"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@drawable/bg_boder14_white50"
                        android:fontFamily="@font/font_regular"
                        android:gravity="top"
                        android:hint="@string/image_type_object_any_details_ne_g_a_beautiful_magical_kingdom"
                        android:padding="@dimen/_12sdp"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:textColor="@color/color_white"
                        android:textColorHint="@color/color_white_50"
                        android:textSize="@dimen/_14sdp" />
                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/fmHomeArtLLPolicy"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/_12sdp"
                        android:layout_height="@dimen/_12sdp"
                        android:src="@drawable/ic_warning"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_regular"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/color_white_70"
                        android:text="@string/content_doesn_t_contain"/>
                </LinearLayout>

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/flexboxLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:alignContent="stretch"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:alignItems="stretch"
                    android:layout_gravity="center"
                    app:flexWrap="wrap" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/font_bold"
                        android:text="@string/choose_an_art_style"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/_16sdp" />
                    <LinearLayout
                        android:id="@+id/fmHomeArtLlMore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="gone">
                        <ImageView
                            android:layout_width="@dimen/_16sdp"
                            android:layout_height="@dimen/_16sdp"
                            android:src="@drawable/ic_more"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/font_medium"
                            android:text="@string/more"
                            android:textColor="@color/color_green_base"
                            android:textSize="@dimen/_14sdp"
                            android:layout_marginStart="@dimen/_6sdp"
                            android:visibility="visible" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/fmHomeArtLlGenerate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:alpha="0.5"
            android:background="@drawable/ripper_btn_full_green_round"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="@string/generate"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/fmHomeArtTvNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_medium"
                android:text="@string/free_tries_left_s"
                android:textColor="@color/color_white_50"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>